--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ plugins:
 collections:
   motions:
     output: true
-    permalink: /:collection/:name.html
+    permalink: :collection/:name
 
 defaults:
   -
