Added mission section F to data, and added empty section displays

--- a/_data/sections.yml
+++ b/_data/sections.yml
@@ -13,11 +13,11 @@
 - name: Section E
   code: E
 
+- name: Section F
+  code: F
+
 - name: Out of Order
   code: OoO
 
 - name: Appendix
   code: App
-
-- name: Uncategorised
-  code:
