--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,8 @@ url: "http://greencoordinate.co.uk" # the base hostname & protocol for your site
 show_coproposers: false
 affiliated_threshold: 4
 unaffiliated_threshold: 12
+archive: true
+fixed_homepage: https://www.greencoordinate.co.uk/agenda
 
 # Build settings
 sass:
