--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "http://greencoordinate.co.uk"
 # Switches
 affiliated_threshold: 4 # The number of coproposers needed for an affiliated motion to be debated.
 unaffiliated_threshold: 12 # The number of coproposers needed for an unaffiliated motion to be debated.
-create_sections: false # If true, display each section as a separate list.
+create_sections: true # If true, display each section as a separate list.
 show_coproposers: false # If true, list the coproposers for each motion.
 archive_notice: false # If true, prepend each page with "archive_notice.html".
 
