removed /agenda suffix!

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Spring Conference 2023
 description: >-
   Motions for the Green Party 2023 Spring Conference, from the Standing Orders Committee.
 email: soc@greenparty.org.uk
-baseurl: "/agenda"
+baseurl: ""
 url: "http://greencoordinate.co.uk"
 
 # Switches
