--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,6 +3,7 @@ backend:
   repo: rileyrouth/greencoordinate
   branch: ash
 media_folder: 'assets/uploads'
+site_url: https://fantastic-crepe-2e5bfe.netlify.app
 collections:
   - name: 'motions'
     label: 'Motion'
