--- a/admin/config.yml
+++ b/admin/config.yml
@@ -10,6 +10,7 @@ collections:
     label_singular: 'Motion'
     folder: '_motions/'
     create: true
+    summary: {{motion_code}}: {{title}}
     editor:
       preview: false
     fields:
