--- a/admin/config.yml
+++ b/admin/config.yml
@@ -10,9 +10,14 @@ collections:
     label_singular: 'Motion'
     folder: '_motions/'
     create: true
-    summary: "{{motion_code}} - {{title}}"
+    summary: "{{motion_code.summary}} - {{title}}"
     editor:
       preview: false
+    view_groups:
+      - label: Section
+        field: motion_code.section
+        # groups items based on the value matched by the pattern
+        pattern: \w+
     fields:
       - label: 'Layout'
         name: 'layout'
