--- a/admin/config.yml
+++ b/admin/config.yml
@@ -37,10 +37,11 @@ collections:
           - label: "Section"
             name: "section"
             widget: "string"
+            required: "false"
           - label: "Number"
             name: "number"
             widget: "number"
       - { label: 'Status', name: 'status', widget: 'string' }
       - { label: 'Green Spaces Link', name: 'spaces', widget: 'string' }
-      - { label: 'Coproposer Count', name: 'coproposers', widget: 'number' }
+      - { label: 'Coproposer Count', name: 'coproposers', widget: 'number', required: "false" }
       - { label: 'Body', name: 'body', widget: 'markdown' }
