--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Spring Conference 2023
+title: Autumn Conference 2023
 description: >-
-  Motions for the Green Party 2023 Spring Conference, from the Standing Orders Committee.
+  Motions for the Green Party 2023 Autumn Conference, from the Standing Orders Committee.
 email: soc@greenparty.org.uk
 baseurl: ""
 url: "http://greencoordinate.co.uk"
