Testing editorial workfloe

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -4,6 +4,7 @@ backend:
   branch: ash
 media_folder: 'assets/uploads'
 site_url: https://fantastic-crepe-2e5bfe.netlify.app
+publish_mode: editorial_workflow
 collections:
   - name: 'motions'
     label: 'Motions'
