--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: github
-  repo: rileyrouth/greencoordinate
+  repo: AshRouth/SOC
   branch: ash
 media_folder: 'assets/uploads'
 site_url: https://fantastic-crepe-2e5bfe.netlify.app
