--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: github
-  repo: AshRouth/SOC
+  repo: rileyrouth/greencoordinate
   branch: ash
 media_folder: 'assets/uploads'
 site_url: https://greencoordinate.netlify.app
