Added a select for statuses

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -42,6 +42,17 @@ collections:
           - label: "Number"
             name: "number"
             widget: "number"
+      - label: 'Status'
+        name: 'status'
+        widget: 'select'
+        options:
+          - { label: "Draft", value: "draft" }
+          - { label: "Final", value: "final" }
+          - { label: "To be debated", value: "tbd" }
+          - { label: "Passed", value: "passed" }
+          - { label: "Defeated", value: "defeated" }
+          - { label: "Referred", value: "referred" }
+          - { label: "Not debated", value: "notdebated" }
       - { label: 'Status', name: 'status', widget: 'string' }
       - { label: 'Green Spaces Link', name: 'spaces', widget: 'string' }
       - { label: 'Coproposer Count', name: 'coproposers', widget: 'number', required: false }
