--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,7 +3,7 @@ backend:
   repo: AshRouth/SOC
   branch: ash
 media_folder: 'files'
-site_url: https://greencoordinate.netlify.app/
+site_url: https://illustrious-mousse-b63d64.netlify.app/
 publish_mode: editorial_workflow
 collections:
   - name: 'motions'
