rendered green spaces link optional

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -52,7 +52,7 @@ collections:
           - { label: "Defeated", value: "defeated" }
           - { label: "Referred", value: "referred" }
           - { label: "Not debated", value: "notdebated" }
-      - { label: 'Green Spaces Link', name: 'spaces', widget: 'string' }
+      - { label: 'Green Spaces Link', name: 'spaces', widget: 'string', required: false }
       - { label: 'Coproposer Count', name: 'coproposers', widget: 'number', required: false }
       - { label: 'Affiliated Motion', name: 'affiliated', widget: 'boolean', required: false }
       - { label: 'Body', name: 'body', widget: 'markdown' }
